--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "path": "^0.12.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "signale": "^1.4.0",
