--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "bcryptjs": "^2.4.3",
+    "boxicons": "^2.1.2",
     "concurrently": "^7.1.0",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
+    "node-sass": "^7.0.1",
     "path": "^0.12.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
