--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "admin-app",
+  "proxy": "http://127.0.0.1:5500/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,8 +8,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "concurrently": "^7.1.0",
+    "cores": "^0.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
