--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcryptjs": "^2.4.3",
     "boxicons": "^2.1.2",
     "concurrently": "^7.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
