--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "admin-app",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@testing-library/jest-dom": "^5.16.4",
@@ -10,7 +11,7 @@
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "boxicons": "^2.1.2",
-    "concurrently": "^7.1.0",
+    "concurrently": "^7.2.0",
     "cores": "^0.8.5",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -27,6 +28,7 @@
     "signale": "^1.4.0",
     "web-vitals": "^2.1.4"
   },
+
   "scripts": {
     "start": "node server.js",
     "build": "react-scripts build",
@@ -50,8 +52,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "engines": {
-    "node": "16.x"
   }
 }
